# spooky

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE.md  Makefile  README.md  architecture.md  benchmarks.md  docs-requirements.txt  index.html  mkdocs.yml  references.md  release-maturity.md  roadmap.md  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  issue.md
.github/workflows/: ci.yml  docs.yml
api/: overview.md
architecture/: components.md  index.html  overview.md
benchmarks/: index.html  load.md  vex.md
bins/: server.rs
changelog/: index.html
concepts/: overview.md  security-model.md
config/: config.development.yaml  config.hetzner.yaml  config.minimal.yaml  config.production.yaml  config.reverse.yaml  config.sample.yaml
configuration/: defaults.md  examples.md  reference.md
crates/bench/: Cargo.toml
crates/bench/src/: allocator.rs  cli.rs  io.rs  lib.rs  main.rs  manifest.rs  markdown.rs  profiler.rs  promotion.rs  regression.rs  report.rs  utils.rs
crates/bench/src/benchmark/: connection.rs  headers.rs  lb.rs  macro_bench.rs  micro_bench.rs  mod.rs  route.rs  runner.rs
crates/bench/tests/: regression.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: context.rs  forwarded.rs  h3_to_h1.rs  h3_to_h2.rs  headers.rs  host.rs  lib.rs  request.rs  response.rs  websocket.rs
crates/bridge/tests/regression/: h3_to_h1.rs  h3_to_h2.rs
crates/config/: Cargo.toml
crates/config/src/: backend_endpoint.rs  config.rs  default.rs  lib.rs  loader.rs  runtime.rs  validator.rs
crates/config/src/runtime/: listeners.rs  policies.rs  upstreams.rs
crates/config/src/runtime/policies/: admission.rs  auth.rs  backend.rs  lb.rs  mod.rs  resilience.rs  timeouts.rs  transport.rs  watchdog.rs
crates/config/src/validator/: helpers.rs  tests.rs
crates/config/tests/regression/: common.rs  main.rs  policy.rs  tls.rs
crates/edge/: Cargo.toml
crates/edge/src/: benchmark.rs  body.rs  cid_radix.rs  constants.rs  lib.rs  quic_listener.rs  resilience.rs  route_index.rs  types.rs  watchdog.rs
crates/edge/src/benchmark/: connection_lookup.rs  route_lookup.rs
crates/edge/src/metrics/: mod.rs  prometheus.rs
crates/edge/src/quic_listener/: admission.rs  async_runtime.rs  backend_resolution.rs  bootstrap_tls.rs  connection.rs  control_api.rs  control_plane.rs  forwarding.rs  health_check.rs  metrics_endpoint.rs  mod.rs  protocol.rs  runtime_endpoint.rs  runtime_state.rs  shutdown.rs  startup.rs  tests.rs  tls_runtime.rs  token_bucket.rs  validation.rs  workers.rs
crates/edge/src/quic_listener/bootstrap/: context.rs  dispatch.rs  intake.rs  listener.rs  mod.rs  outcome.rs  request.rs  response.rs  startup.rs  state.rs  websocket.rs
crates/edge/src/quic_listener/control_api/: auth.rs  context.rs  http.rs  mod.rs  reload.rs  render.rs  service.rs  state.rs  tests.rs  watchdog.rs
crates/edge/src/quic_listener/forwarding/: auth.rs  dispatch.rs  lb_key.rs  mod.rs  prepare.rs  resolve.rs  response.rs  stream_progress.rs
crates/edge/src/quic_listener/metrics/: http.rs  mod.rs  service.rs  state.rs
crates/edge/src/resilience/: adaptive_admission.rs  brownout.rs  circuit_breaker.rs  retry_budget.rs  route_queue.rs  runtime.rs  scoped_rate_limit.rs
crates/edge/src/route_index/: tests.rs
crates/edge/src/routing/: index.rs  matcher.rs  scan.rs  trie.rs
crates/edge/src/runtime/: bundle.rs  generation.rs  listener.rs  mod.rs  shared_state.rs  tasks.rs
crates/edge/src/runtime/backend/: lifecycle.rs  mod.rs  resolution.rs  state.rs  store.rs  update.rs
crates/edge/src/runtime/connection/: auth.rs  guardrails.rs  mod.rs  outcome.rs  quic.rs  request.rs  response.rs  stream.rs
crates/edge/src/runtime/tls/: inventory.rs  store.rs
crates/edge/src/watchdog/: config.rs  coordinator.rs  mod.rs  service.rs  state.rs  time.rs
crates/edge/tests/: h1_upstream.rs  h3_bridge.rs  h3_edge.rs  health_classification_tests.rs  lb_integration.rs  resilience.rs  runtime.rs  tests.rs  watchdog.rs
crates/edge/tests/h3_bridge/: protocol.rs
crates/edge/tests/h3_edge/: admission.rs  external_auth.rs  lifecycle.rs  malformed.rs  scid.rs  startup.rs
crates/edge/tests/regression/: hash.rs  main.rs  metrics.rs
crates/edge/tests/support/: net.rs
crates/transport/: Cargo.toml
crates/transport/src/: client_rotation.rs  h1_client.rs  h1_pool.rs  h2_client.rs  h2_pool.rs  lib.rs  transport_pool.rs
crates/transport/tests/: abstraction.rs  h1_pool.rs  h2_pool.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  logger.rs  telemetry.rs  tls.rs
crates/utils/src/logger/: errors.rs  formatter.rs  init.rs  mod.rs
crates/utils/src/telemetry/: endpoint.rs  init.rs  mod.rs
crates/utils/tests/: logger.rs  logger_live_reload.rs  telemetry.rs
css/: base.css
deploy/: make-deb.sh
deployment/: migration.md  production.md  validation.md
development/: adding-features.md  benchmarking.md  codebase-map.md  invariants.md  overview.md
docs/: README.md  architecture.md  development.md  public-api-surface-inventory.md  references.md  release-maturity.md  roadmap.md  specification.md  strong-cert.md
getting-started/: installation.md  minimum-production.md  overview.md
howto/: 01-certificates.md  03-run.md  index.html
javascripts/: code-copy.js
operations/: deployment-patterns.md  failure-modes.md  runbook.md
protocols/: http3.md  quic.md
public-api-surface-inventory/: index.html
reference/: control-api-reference.md  feature-matrix.md  limitations.md  metrics-reference.md  overview.md
references/: index.html
release-maturity/: index.html
roadmap/: index.html
scripts/: common.sh  lb-consistent-hash.sh  lb-random.sh  lb-round-robin.sh  load-matrix.sh  load-scenarios.sh
search/: search_index.json
spooky/: Cargo.toml
spooky/src/: app.rs  listener_group.rs  main.rs  privilege_drop.rs  runtime_guard.rs
src/: main.rs
stylesheets/: extra.css
troubleshooting/: common-issues.md
tutorials/: quickstart.md
user-guide/: basics.md  load-balancing.md
(+150 files in other folders)
