[workspace]
members = [
    "spooky",
    "crates/config",
    "crates/utils",
    "crates/edge",
    "crates/bridge",
    "crates/transport",
    "crates/lb",
    "crates/errors",
    "crates/bench",
]
resolver = "2"

[workspace.dependencies]
bytes = "1.10.1"
clap = { version = "4.5.49", features = ["derive"] }
env_logger = "0.11.3"
http = "1.3.1"
http-body-util = "0.1"
hyper = "1"
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http2", "webpki-roots", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
log = "0.4.28"
quiche = "0.24.6"
rand = "0.8"
rustls-pki-types = "1.12.0"
webpki-roots = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
smallvec = "1"
subtle = "2"
socket2 = { version = "0.5", features = ["all"] }
core_affinity = "0.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-opentelemetry = "0.29.0"
opentelemetry = "0.28.0"
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic", "trace"] }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Elastic-2.0"
