[package]
name = "spooky-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
libc.workspace = true
smallvec.workspace = true

spooky-config = { path = "../config" }
spooky-edge = { path = "../edge" }
spooky-lb = { path = "../lb" }
