[package]
name = "spooky-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
http.workspace = true
quiche.workspace = true
bytes.workspace = true
http-body-util.workspace = true
hyper.workspace = true
spooky-errors = { path = "../errors" }
spooky-config = { path = "../config" }

[[test]]
name = "regression"
path = "tests/regression/main.rs"
