[package]
name = "spooky-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
serde.workspace = true
serde_yaml.workspace = true
rustls-pki-types.workspace = true
idna = "1"
http.workspace = true

[dev-dependencies]
tempfile = "3"
rcgen = "0.12"

[[test]]
name = "regression"
path = "tests/regression/main.rs"
