[package]
name = "spooky-edge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
boring.workspace = true
base64.workspace = true
log.workspace = true
quiche.workspace = true
spooky-config = { path = "../config" }
spooky-lb = { path = "../lb" }
spooky-bridge = { path = "../bridge" }
spooky-transport = { path = "../transport" }
spooky-errors = { path = "../errors" }
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
tokio.workspace = true
serial_test = "3"
rand.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
socket2.workspace = true
tracing.workspace = true
serde_json.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
subtle.workspace = true
x509-parser = "0.16"

[dev-dependencies]
rand.workspace = true
rcgen = "0.12"
tempfile = "3"
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio.workspace = true
libc.workspace = true
