[package]
name = "spooky-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
log.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio.workspace = true
tower-service = "0.3"
webpki-roots.workspace = true
spooky-errors = { path = "../errors" }
