[package]
name = "spooky-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
env_logger.workspace = true
libc.workspace = true
log.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

[dev-dependencies]
tempfile = "3"
